--- a/Depo/Depo/Presentation/SubViews/SpotifyStatusView/SpotifyStatusView.xib
+++ b/Depo/Depo/Presentation/SubViews/SpotifyStatusView/SpotifyStatusView.xib
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="e8c-8d-FZA" customClass="SpotifyStatusView" customModule="lifebox" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="e8c-8d-FZA" customClass="SpotifyStatusView" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
@@ -35,13 +33,17 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rLY-Xa-6Cr">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rLY-Xa-6Cr">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="78" id="Nz5-oR-TxG"/>
+                    </constraints>
                     <connections>
                         <action selector="onViewTap:" destination="e8c-8d-FZA" eventType="touchUpInside" id="qjA-bl-rxK"/>
                     </connections>
                 </button>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="pbf-Vc-lrV"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="pbf-Vc-lrV" firstAttribute="trailing" secondItem="2vw-7N-5gV" secondAttribute="trailing" constant="30" id="1rP-9S-Aqz"/>
@@ -58,7 +60,6 @@
                 <constraint firstItem="rLY-Xa-6Cr" firstAttribute="top" secondItem="pbf-Vc-lrV" secondAttribute="top" id="yGd-Mw-vvs"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="pbf-Vc-lrV"/>
             <connections>
                 <outlet property="subtitleLabel" destination="2vw-7N-5gV" id="VnG-ZG-Dcw"/>
                 <outlet property="titleLabel" destination="LyX-P9-Fmo" id="df2-gE-XRM"/>
