--- a/Depo/Depo/Presentation/UserStories/Others/PrivateShare/Views/Suggestions/PrivateShareContactSuggestionView.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/PrivateShare/Views/Suggestions/PrivateShareContactSuggestionView.xib
@@ -11,14 +11,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PrivateShareContactSuggestionView" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="136"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="40"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="tmO-pc-9rc">
-                    <rect key="frame" x="0.0" y="16" width="414" height="112"/>
+                    <rect key="frame" x="0.0" y="16" width="414" height="16"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wji-ww-wcm">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="112"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="16"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dhl-EW-2px">
                                     <rect key="frame" x="16" y="0.0" width="382" height="16"/>
@@ -54,7 +54,7 @@
                 <outlet property="nameLabel" destination="dhl-EW-2px" id="XIz-Og-Ggq"/>
                 <outlet property="nameView" destination="Wji-ww-wcm" id="eSI-7D-I8g"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="184.82142857142856"/>
+            <point key="canvasLocation" x="132" y="150"/>
         </view>
     </objects>
     <resources>
